examples, showcases, tutorials, tests: follow 'UdpBasicApp: using JSON for destAddresses parameter'

--- a/examples/adhoc/hostautoconf/omnetpp.ini
+++ b/examples/adhoc/hostautoconf/omnetpp.ini
@@ -26,7 +26,7 @@ sim-time-limit = 60min
 # UdpBasicApp / UdpSink
 **.host*.numApps = 1
 **.app[0].typename = "UdpBasicApp"
-**.app[0].destAddresses = "host[0]"
+**.app[0].destAddresses = ["host[0]"]
 **.app[0].localPort = 9001
 **.app[0].destPort = 9001
 **.app[0].messageLength = 100B
