--- a/examples/bgpv4/BgpAndOspf/omnetpp.ini
+++ b/examples/bgpv4/BgpAndOspf/omnetpp.ini
@@ -44,13 +44,13 @@ output-scalar-precision = 5
 **.app[0].destPort = 1234
 
 **.HA11.app[0].typename = "UdpBasicApp"
-**.HA11.app[0].destAddresses = "192.170.1.2"
+**.HA11.app[0].destAddresses = ["192.170.1.2"]
 **.HA21.app[0].typename = "UdpBasicApp"
-**.HA21.app[0].destAddresses = "192.171.1.2"
+**.HA21.app[0].destAddresses = ["192.171.1.2"]
 **.HB11.app[0].typename = "UdpBasicApp"
-**.HB11.app[0].destAddresses = "192.168.1.2"
+**.HB11.app[0].destAddresses = ["192.168.1.2"]
 **.HB21.app[0].typename = "UdpBasicApp"
-**.HB21.app[0].destAddresses = "192.169.1.2"
+**.HB21.app[0].destAddresses = ["192.169.1.2"]
 
 **.HA12.app[0].typename = "UdpSink"
 **.HA22.app[0].typename = "UdpSink"
