--- a/examples/bgpv4/BgpAndOspfSimple/omnetpp.ini
+++ b/examples/bgpv4/BgpAndOspfSimple/omnetpp.ini
@@ -44,7 +44,7 @@ output-scalar-precision = 2
 **.HA11.app[0].destPort = 5678
 **.HA11.app[0].messageLength = 32 bytes
 **.HA11.app[0].sendInterval = 1s
-**.HA11.app[0].destAddresses = "192.170.1.1"
+**.HA11.app[0].destAddresses = ["192.170.1.1"]
 
 **.HB11.numApps = 1
 **.HB11.app[*].typename = "UdpSink"
