--- a/examples/bgpv4/BgpCompleteTest/omnetpp.ini
+++ b/examples/bgpv4/BgpCompleteTest/omnetpp.ini
@@ -46,13 +46,13 @@ output-scalar-precision = 5
 **.app[0].destPort = 1234
 
 **.HA11.app[0].typename = "UdpBasicApp"
-**.HA11.app[0].destAddresses = "172.10.8.2"
+**.HA11.app[0].destAddresses = ["172.10.8.2"]
 **.HB11.app[0].typename = "UdpBasicApp"
-**.HB11.app[0].destAddresses = "172.15.0.2"
+**.HB11.app[0].destAddresses = ["172.15.0.2"]
 **.HD11.app[0].typename = "UdpBasicApp"
-**.HD11.app[0].destAddresses = "172.1.0.2"
+**.HD11.app[0].destAddresses = ["172.1.0.2"]
 **.HE11.app[0].typename = "UdpBasicApp"
-**.HE11.app[0].destAddresses = "172.10.4.2"
+**.HE11.app[0].destAddresses = ["172.10.4.2"]
 
 **.HA12.app[0].typename = "UdpSink"
 **.HB12.app[0].typename = "UdpSink"
