--- a/examples/diffserv/onedomain/omnetpp.ini
+++ b/examples/diffserv/onedomain/omnetpp.ini
@@ -48,10 +48,10 @@ sim-time-limit = 1250s
 **.H{1..4}.app[1].stopTime = 1200s
 **.H{1..4}.app[1].sendInterval = 40ms
 **.H{1..4}.app[1].messageLength = 500B
-**.H1.app[1].destAddresses = "H5"
-**.H2.app[1].destAddresses = "H6"
-**.H3.app[1].destAddresses = "H7"
-**.H4.app[1].destAddresses = "H8"
+**.H1.app[1].destAddresses = ["H5"]
+**.H2.app[1].destAddresses = ["H6"]
+**.H3.app[1].destAddresses = ["H7"]
+**.H4.app[1].destAddresses = ["H8"]
 
 **.H{5..8}.app[1].typename = "UdpSink"
 **.H{5..8}.app[1].localPort = 1000
@@ -135,7 +135,7 @@ extends = Apps, Exp1
 **.H4.app[0].stopTime = 1200s
 **.H4.app[0].sendInterval = ${iaTime=400ms,200ms,133ms,100ms,80ms,67ms,57ms,50ms,44ms,40ms} #  rates: 10kbps,20kbps,...100kpbs
 **.H4.app[0].messageLength = 500B-20B-8B
-**.H4.app[0].destAddresses = "H8"
+**.H4.app[0].destAddresses = ["H8"]
 
 **.H8.numApps = 1
 **.H8.app[0].typename = "UdpSink"
@@ -203,7 +203,7 @@ repeat = 3
 **.H1.app[2].stopTime = 1200s
 **.H1.app[2].sendInterval = ${iaTime=400ms,200ms,133ms,100ms,80ms} #  rates: 10kbps,20kbps,...50kpbs
 **.H1.app[2].messageLength = 500B-20B-8B
-**.H1.app[2].destAddresses = "H5"
+**.H1.app[2].destAddresses = ["H5"]
 
 **.H5.numApps = 3
 **.H5.app[2].typename = "UdpSink"
