--- a/examples/diffserv/simple_/omnetpp.ini
+++ b/examples/diffserv/simple_/omnetpp.ini
@@ -6,7 +6,7 @@ sim-time-limit = 50s
 **.numClients = 1
 **.client[*].numApps = 2
 **.client[*].app[*].typename = "UdpBasicApp"
-**.client[*].app[*].destAddresses = "server"
+**.client[*].app[*].destAddresses = ["server"]
 **.client[*].app[*].messageLength = 1000B
 **.client[*].app[*].startTime = uniform(0s,0.1s)
 **.client[*].app[*].sendInterval = 100ms
