--- a/examples/inet/broadcast/omnetpp.ini
+++ b/examples/inet/broadcast/omnetpp.ini
@@ -3,8 +3,10 @@ network = inet.examples.inet.broadcast.UDPBroadcastNetwork
 
 **.client.numApps = 1
 **.client.app[0].typename = "UdpBasicApp"
-**.client.app[*].destAddresses =  "10.0.1.255"
+
+**.client.app[*].destAddresses =  ["10.0.1.255"]
 **.client.app[0].destPort = 1000
+
 **.client.app[0].messageLength = 100B
 **.client.app[0].startTime = 10s
 **.client.app[0].sendInterval = 1s
