--- a/examples/inet/kidsnw1/omnetpp.ini
+++ b/examples/inet/kidsnw1/omnetpp.ini
@@ -9,7 +9,7 @@ total-stack = 7MiB
 **.app[0].destPort = 100
 **.app[0].messageLength = 1250 bytes
 **.app[0].sendInterval = 0.2s
-**.app[0].destAddresses = "host1 host2 host3"
+**.app[0].destAddresses = ["host1", "host2", "host3"]
 
 # NIC configuration
 **.ppp[*].ppp.queue.typename = "DropTailQueue" # in routers
