--- a/examples/inet/tunnel/omnetpp.ini
+++ b/examples/inet/tunnel/omnetpp.ini
@@ -29,7 +29,7 @@ description = Tunnel UDP packets over UDP/IPv4
 
 *.client.numApps = 1
 *.client.app[0].typename = "UdpBasicApp"
-*.client.app[0].destAddresses = "server"
+*.client.app[0].destAddresses = ["server"]
 *.client.app[0].destPort = 1000
 *.client.app[0].messageLength = 1000B
 *.client.app[0].sendInterval = 100ms
