--- a/examples/mpls/ldp/omnetpp.ini
+++ b/examples/mpls/ldp/omnetpp.ini
@@ -9,7 +9,7 @@ total-stack = 64MiB
 **.host1.app[0].destPort = 100
 **.host1.app[0].messageLength = 128 bytes
 **.host1.app[0].sendInterval = 0.01s
-**.host1.app[0].destAddresses = "host2"
+**.host1.app[0].destAddresses = ["host2"]
 
 **.host3.numApps = 1
 **.host3.app[0].typename = "UdpBasicApp"
@@ -17,7 +17,7 @@ total-stack = 64MiB
 **.host3.app[0].destPort = 100
 **.host3.app[0].messageLength = 128 bytes
 **.host3.app[0].sendInterval = 0.01s
-**.host3.app[0].destAddresses = "host4"
+**.host3.app[0].destAddresses = ["host4"]
 
 **.host{2..4}.numApps = 1
 **.host{2..4}.app[0].typename = "UdpSink"
