--- a/examples/mpls/testte_failure2/omnetpp.ini
+++ b/examples/mpls/testte_failure2/omnetpp.ini
@@ -9,7 +9,7 @@ total-stack = 64MiB
 **.host1.app[0].destPort = 100
 **.host1.app[0].messageLength = 128 bytes
 **.host1.app[0].sendInterval = 0.01s
-**.host1.app[0].destAddresses = "host3"
+**.host1.app[0].destAddresses = ["host3"]
 
 **.host3.numApps = 1
 **.host3.app[0].typename = "UdpEchoApp"
