--- a/examples/mpls/testte_reroute/omnetpp.ini
+++ b/examples/mpls/testte_reroute/omnetpp.ini
@@ -10,7 +10,7 @@ total-stack = 64MiB
 **.host1.app[0].destPort = 100
 **.host1.app[0].messageLength = 128 bytes
 **.host1.app[0].sendInterval = 0.01s
-**.host1.app[0].destAddresses = "host3"
+**.host1.app[0].destAddresses = ["host3"]
 
 **.host2.numApps = 1
 **.host2.app[0].typename = "UdpBasicApp"
@@ -18,7 +18,7 @@ total-stack = 64MiB
 **.host2.app[0].destPort = 100
 **.host2.app[0].messageLength = 128 bytes
 **.host2.app[0].sendInterval = 0.01s
-**.host2.app[0].destAddresses = "host4"
+**.host2.app[0].destAddresses = ["host4"]
 
 **.host{3..4}.numApps = 1
 **.host{3..4}.app[0].typename = "UdpSink"
