--- a/examples/mpls/testte_tunnel/omnetpp.ini
+++ b/examples/mpls/testte_tunnel/omnetpp.ini
@@ -10,8 +10,8 @@ total-stack = 64MiB
 **.host{1..2}.app[0].destPort = 100
 **.host{1..2}.app[0].messageLength = 128 bytes
 **.host{1..2}.app[0].sendInterval = 0.01s
-**.host1.app[0].destAddresses = "host3"
-**.host2.app[0].destAddresses = "host4"
+**.host1.app[0].destAddresses = ["host3"]
+**.host2.app[0].destAddresses = ["host4"]
 
 **.host{3..4}.numApps = 1
 **.host{3..4}.app[0].typename = "UdpSink"
