--- a/examples/ospfv2/areas/omnetpp.ini
+++ b/examples/ospfv2/areas/omnetpp.ini
@@ -17,10 +17,10 @@ network = OSPF_AreaTest
 **.app[1..].destPort = 1234
 **.app[1..].messageLength = 32 bytes
 **.app[1..].sendInterval = 0.1s
-**.H3.app[1].destAddresses = "Area1.H1"
-**.H3.app[2].destAddresses = "Area1.H2"
-**.H1.app[1].destAddresses = "Area2.H3"
-**.H2.app[1].destAddresses = "Area2.H3"
+**.H3.app[1].destAddresses = ["Area1.H1"]
+**.H3.app[2].destAddresses = ["Area1.H2"]
+**.H1.app[1].destAddresses = ["Area2.H3"]
+**.H2.app[1].destAddresses = ["Area2.H3"]
 
 **.arp.cacheTimeout = 1s
 
