--- a/examples/ospfv2/areatests/omnetpp.ini
+++ b/examples/ospfv2/areatests/omnetpp.ini
@@ -24,28 +24,28 @@ network = OSPF_BackboneTest
 **.ospf.ospfConfig = xmldoc("ASConfig1.xml")
 #*.scenarioManager.script = xmldoc("scenario1.xml")
 *.scenarioManager.script = xml("<empty/>")
-**.H[0].app[1].destAddresses = "Backbone.H[5]"
-#**.H[1].app[1].destAddresses = "Backbone.H[6]"
-#**.H[2].app[1].destAddresses = "Backbone.H[7]"
-#**.H[3].app[1].destAddresses = "Backbone.H[8]"
-#**.H[4].app[1].destAddresses = "Backbone.H[9]"
-**.H[5].app[1].destAddresses = "Backbone.H[0]"
-#**.H[6].app[1].destAddresses = "Backbone.H[1]"
-#**.H[7].app[1].destAddresses = "Backbone.H[2]"
-#**.H[8].app[1].destAddresses = "Backbone.H[3]"
-#**.H[9].app[1].destAddresses = "Backbone.H[4]"
+**.H[0].app[1].destAddresses = ["Backbone.H[5]"]
+#**.H[1].app[1].destAddresses = ["Backbone.H[6]"]
+#**.H[2].app[1].destAddresses = ["Backbone.H[7]"]
+#**.H[3].app[1].destAddresses = ["Backbone.H[8]"]
+#**.H[4].app[1].destAddresses = ["Backbone.H[9]"]
+**.H[5].app[1].destAddresses = ["Backbone.H[0]"]
+#**.H[6].app[1].destAddresses = ["Backbone.H[1]"]
+#**.H[7].app[1].destAddresses = ["Backbone.H[2]"]
+#**.H[8].app[1].destAddresses = ["Backbone.H[3]"]
+#**.H[9].app[1].destAddresses = ["Backbone.H[4]"]
 
 [Config backboneandonestub]
 network = OSPF_BackboneAndOneStubTest
 **.ospf.ospfConfig = xmldoc("ASConfig2.xml")
 *.scenarioManager.script = xml("<empty/>")
 #*.scenarioManager.script = xmldoc("scenario2.xml")
-*.Stub1.H[0].app[1].destAddresses = "Backbone.H[0]"
-*.Stub1.H[1].app[1].destAddresses = "Backbone.H[1]"
-*.Stub1.H[2].app[1].destAddresses = "Backbone.H[2]"
-*.Backbone.H[0].app[1].destAddresses = "Stub1.H[0]"
-*.Backbone.H[1].app[1].destAddresses = "Stub1.H[1]"
-*.Backbone.H[2].app[1].destAddresses = "Stub1.H[2]"
+*.Stub1.H[0].app[1].destAddresses = ["Backbone.H[0]"]
+*.Stub1.H[1].app[1].destAddresses = ["Backbone.H[1]"]
+*.Stub1.H[2].app[1].destAddresses = ["Backbone.H[2]"]
+*.Backbone.H[0].app[1].destAddresses = ["Stub1.H[0]"]
+*.Backbone.H[1].app[1].destAddresses = ["Stub1.H[1]"]
+*.Backbone.H[2].app[1].destAddresses = ["Stub1.H[2]"]
 
 
 [Config backboneandtwostubs]
@@ -53,12 +53,12 @@ network = OSPF_BackboneAndTwoStubsTest
 **.ospf.ospfConfig = xmldoc("ASConfig3.xml")
 #*.scenarioManager.script = xmldoc("scenario3.xml")
 *.scenarioManager.script = xml("<empty/>")
-*.Stub1.H[0].app[1].destAddresses = "Stub2.H[0]"
-*.Stub1.H[1].app[1].destAddresses = "Stub2.H[1]"
-*.Stub1.H[2].app[1].destAddresses = "Stub2.H[2]"
-*.Stub2.H[0].app[1].destAddresses = "Stub1.H[0]"
-*.Stub2.H[1].app[1].destAddresses = "Stub1.H[1]"
-*.Stub2.H[2].app[1].destAddresses = "Stub1.H[2]"
+*.Stub1.H[0].app[1].destAddresses = ["Stub2.H[0]"]
+*.Stub1.H[1].app[1].destAddresses = ["Stub2.H[1]"]
+*.Stub1.H[2].app[1].destAddresses = ["Stub2.H[2]"]
+*.Stub2.H[0].app[1].destAddresses = ["Stub1.H[0]"]
+*.Stub2.H[1].app[1].destAddresses = ["Stub1.H[1]"]
+*.Stub2.H[2].app[1].destAddresses = ["Stub1.H[2]"]
 **.mtu = 60000B
 
 [Config mininet-A]
@@ -67,10 +67,10 @@ network = OSPF_mininet
 #*.scenarioManager.script = xmldoc("scenario3.xml")
 *.scenarioManager.script = xml("<empty/>")
 *.S*H[*].numApps = 2
-*.S1H[0].app[1].destAddresses = "S2H[0]"
-*.S2H[0].app[1].destAddresses = "S1H[0]"
-*.S1H[1].app[1].destAddresses = "S2H[1]"
-*.S2H[1].app[1].destAddresses = "S1H[1]"
+*.S1H[0].app[1].destAddresses = ["S2H[0]"]
+*.S2H[0].app[1].destAddresses = ["S1H[0]"]
+*.S1H[1].app[1].destAddresses = ["S2H[1]"]
+*.S2H[1].app[1].destAddresses = ["S1H[1]"]
 
 *.BBR[0].ipv4.routingTable.routerId =  "10.0.0.0"
 *.BBR[1].ipv4.routingTable.routerId =  "10.0.0.1"
@@ -89,10 +89,10 @@ network = OSPF_mininet
 #*.scenarioManager.script = xmldoc("scenario3.xml")
 *.scenarioManager.script = xml("<empty/>")
 *.S*H[*].numApps = 2
-*.S1H[0].app[1].destAddresses = "S2H[0]"
-*.S2H[0].app[1].destAddresses = "S1H[0]"
-*.S1H[1].app[1].destAddresses = "S2H[1]"
-*.S2H[1].app[1].destAddresses = "S1H[1]"
+*.S1H[0].app[1].destAddresses = ["S2H[0]"]
+*.S2H[0].app[1].destAddresses = ["S1H[0]"]
+*.S1H[1].app[1].destAddresses = ["S2H[1]"]
+*.S2H[1].app[1].destAddresses = ["S1H[1]"]
 
 *.BBR[0].ipv4.routingTable.routerId =  "10.0.0.10"
 *.BBR[1].ipv4.routingTable.routerId =  "10.0.0.11"
