--- a/examples/ospfv2/backbone/omnetpp.ini
+++ b/examples/ospfv2/backbone/omnetpp.ini
@@ -13,8 +13,8 @@ network = Backbone
 **.app[0].destPort = 1234
 **.app[0].messageLength = 32 bytes
 **.app[0].sendInterval = 0.1s
-**.H2.app[0].destAddresses = "192.168.2.2"
-**.H1.app[0].destAddresses = "192.168.4.1"
+**.H2.app[0].destAddresses = ["192.168.2.2"]
+**.H1.app[0].destAddresses = ["192.168.4.1"]
 **.app[1].typename = "UdpEchoApp"
 **.app[1].localPort = 1234
 
