--- a/examples/pim/dm/assert/omnetpp.ini
+++ b/examples/pim/dm/assert/omnetpp.ini
@@ -22,7 +22,7 @@ network = Network
 **.Source.app[0].destPort = 5000
 **.Source.app[0].messageLength = 100B
 
-**.Source.app[0].destAddresses = "226.1.1.1"
+**.Source.app[0].destAddresses = ["226.1.1.1"]
 **.Source.app[0].startTime = 80s
 **.Source.app[0].sendInterval = 15s
 **.Source.app[0].stopTime = 80s + 20 * 15s
