--- a/examples/pim/dm/basic/omnetpp.ini
+++ b/examples/pim/dm/basic/omnetpp.ini
@@ -21,12 +21,12 @@ network = pimDMFinal
 **.Source?.app[0].destPort = 5000
 **.Source?.app[0].messageLength = 100B
 
-**.Source1.app[0].destAddresses = "226.1.1.1"
+**.Source1.app[0].destAddresses = ["226.1.1.1"]
 **.Source1.app[0].startTime = 80s
 **.Source1.app[0].sendInterval = 15s
 **.Source1.app[0].stopTime = 80s + 20 * 15s
 
-**.Source2.app[0].destAddresses = "226.2.2.2"
+**.Source2.app[0].destAddresses = ["226.2.2.2"]
 **.Source2.app[0].startTime = 215s
 **.Source2.app[0].sendInterval = 5s
 **.Source2.app[0].stopTime = 80s + 37 * 5s
