--- a/examples/pim/iptv/omnetpp.ini
+++ b/examples/pim/iptv/omnetpp.ini
@@ -20,7 +20,7 @@ network = inet.examples.pim.iptv.Network
 **.server.app[0].typename = "UdpBasicApp"
 **.server.app[0].destPort = 5000
 **.server.app[0].messageLength = 200B
-**.server.app[0].destAddresses = "239.0.0.11"
+**.server.app[0].destAddresses = ["239.0.0.11"]
 **.server.app[0].startTime = 20s
 **.server.app[0].stopTime = 30s
 **.server.app[0].sendInterval = 0.04s
