--- a/examples/pim/sm/basic/omnetpp.ini
+++ b/examples/pim/sm/basic/omnetpp.ini
@@ -20,7 +20,7 @@ network = PIM_SM_Network
 
 [Config Scenario1]
 description = "PIM-SM Scenario1: Receivers first ..."
-**.Source1.app[0].destAddresses = "239.0.0.11"
+**.Source1.app[0].destAddresses = ["239.0.0.11"]
 **.Source1.app[0].startTime = 12s
 **.Source1.app[0].sendInterval = 2s
 **.Source1.app[0].stopTime = 12s + 10 * 2s
@@ -30,7 +30,7 @@ description = "PIM-SM Scenario1: Receivers first ..."
 
 [Config Scenario2]
 description = "PIM-SM Scenario2: Sender first ..."
-**.Source1.app[0].destAddresses = "239.0.0.11"
+**.Source1.app[0].destAddresses = ["239.0.0.11"]
 **.Source1.app[0].startTime = 9s
 **.Source1.app[0].sendInterval = 5s
 **.Source1.app[0].stopTime = 9s + 20 * 5s
@@ -42,7 +42,7 @@ description = "PIM-SM Scenario2: Sender first ..."
 
 [Config Scenario3]
 description = "PIM-SM Scenario3: Timers ..."
-**.Source1.app[0].destAddresses = "239.0.0.11"
+**.Source1.app[0].destAddresses = ["239.0.0.11"]
 **.Source1.app[0].startTime = 13s
 **.Source1.app[0].sendInterval = 25s
 **.Source1.app[0].stopTime = 13s + 10 * 25s
@@ -54,13 +54,13 @@ description = "PIM-SM Scenario3: Timers ..."
 
 [Config Scenario4]
 description = "PIM-SM Scenario4: Two multicast sources ..."
-**.Source1.app[0].destAddresses = "239.0.0.11"
+**.Source1.app[0].destAddresses = ["239.0.0.11"]
 **.Source1.app[0].startTime = 10s
 **.Source1.app[0].sendInterval = 15s # 10s, 25s, 40s, 55s
 **.Source1.app[0].stopTime = 10s + 4 * 15s
 
 **.Source2.numApps = 1
-**.Source2.app[0].destAddresses = "239.0.0.22"
+**.Source2.app[0].destAddresses = ["239.0.0.22"]
 **.Source2.app[0].startTime = 15s
 **.Source2.app[0].sendInterval = 15s # 15s, 30s, 45s, 60s
 **.Source2.app[0].stopTime = 15s + 4 * 15s
