--- a/examples/wireless/mactest/omnetpp.ini
+++ b/examples/wireless/mactest/omnetpp.ini
@@ -39,7 +39,7 @@ extends = MacBase
 # cli
 **.cliHost.numUdpApps = 2
 **.cliHost.udpApp[*].typename = "UdpBasicApp"
-**.cliHost.udpApp[*].destAddresses = "srvHost"
+**.cliHost.udpApp[*].destAddresses = ["srvHost"]
 **.cliHost.udpApp[0].destPort = 21
 **.cliHost.udpApp[1].destPort = 5000
 **.cliHost.udpApp[0].packetName = "FTP"
