--- a/examples/wireless/qos/omnetpp.ini
+++ b/examples/wireless/qos/omnetpp.ini
@@ -36,7 +36,7 @@ network = QosThroughput
 # cli
 **.cliHost.numApps = 4
 **.cliHost.app[*].typename = "UdpBasicApp"
-**.cliHost.app[*].destAddresses = "srvHost"
+**.cliHost.app[*].destAddresses = ["srvHost"]
 **.cliHost.app[0].destPort = 21
 **.cliHost.app[1].destPort = 80
 **.cliHost.app[2].destPort = 4000
