--- a/examples/wireless/wiredandwirelesshostswithap/omnetpp.ini
+++ b/examples/wireless/wiredandwirelesshostswithap/omnetpp.ini
@@ -10,12 +10,12 @@ sim-time-limit = 400s
 **.*Host*.app[0].localPort = 1000
 
 **.*Host*.app[*].typename = "UdpBasicApp"
-**.wiredHost1.app[1].destAddresses = "wirelessHost1"
-**.wiredHost1.app[2].destAddresses = "wiredHost2"
-**.wiredHost2.app[1].destAddresses = "wirelessHost1"
-**.wiredHost2.app[2].destAddresses = "wiredHost1"
-**.wirelessHost1.app[1].destAddresses = "wiredHost1"
-**.wirelessHost1.app[2].destAddresses = "wiredHost2"
+**.wiredHost1.app[1].destAddresses = ["wirelessHost1"]
+**.wiredHost1.app[2].destAddresses = ["wiredHost2"]
+**.wiredHost2.app[1].destAddresses = ["wirelessHost1"]
+**.wiredHost2.app[2].destAddresses = ["wiredHost1"]
+**.wirelessHost1.app[1].destAddresses = ["wiredHost1"]
+**.wirelessHost1.app[2].destAddresses = ["wiredHost2"]
 **.*Host*.app[1..].destPort = 1000
 **.*Host*.app[1..].messageLength = 100B
 **.*Host*.app[1..].sendInterval = 1s
