--- a/showcases/emulation/babel/omnetpp.ini
+++ b/showcases/emulation/babel/omnetpp.ini
@@ -79,7 +79,7 @@ sim-time-limit = 3600s
 
 *.host[2].numApps = 1
 *.host[2].app[0].typename = "UdpBasicApp"
-*.host[2].app[0].destAddresses = "host[0]"
+*.host[2].app[0].destAddresses = ["host[0]"]
 *.host[2].app[0].localPort = 60000
 *.host[2].app[0].destPort = 1000
 *.host[2].app[0].messageLength = 1000B
