--- a/showcases/general/pcaprecording/omnetpp.ini
+++ b/showcases/general/pcaprecording/omnetpp.ini
@@ -4,7 +4,7 @@ network = PcapRecordingShowcase
 # traffic settings
 *.host1.numApps = 1
 *.host1.app[0].typename = "UdpBasicApp"
-*.host1.app[*].destAddresses = "host2"
+*.host1.app[*].destAddresses = ["host2"]
 *.host1.app[*].destPort = 1000
 *.host1.app[*].localPort = 1000
 *.host1.app[*].messageLength = 1000Byte
