--- a/showcases/visualizer/radiomediumactivity/omnetpp.ini
+++ b/showcases/visualizer/radiomediumactivity/omnetpp.ini
@@ -8,7 +8,7 @@ description = "Displaying signals, transmissions and receptions"
 # UDP settings
 *.host1.numApps = 1
 *.host1.app[0].typename = "UdpBasicApp"
-*.host1.app[*].destAddresses = "host2"
+*.host1.app[*].destAddresses = ["host2"]
 *.host1.app[*].destPort = 1000
 *.host1.app[*].messageLength = 1000byte
 *.host1.app[*].sendInterval = 10s
@@ -37,7 +37,7 @@ description = "Multiple nodes"
 # UDP settings
 *.source.numApps = 1
 *.source.app[0].typename = "UdpBasicApp"
-*.source.app[*].destAddresses = "destination"
+*.source.app[*].destAddresses = ["destination"]
 *.source.app[*].destPort = 1000
 *.source.app[*].messageLength = 1000byte
 *.source.app[*].sendInterval = 10s
