--- a/showcases/visualizer/submoduleinfo/omnetpp.ini
+++ b/showcases/visualizer/submoduleinfo/omnetpp.ini
@@ -7,7 +7,7 @@ network = SubmoduleInformationVisualizationShowcase
 *.source.app[*].destPort = 1000
 *.source.app[*].messageLength = 1000Byte
 *.source.app[*].sendInterval = 10ms
-*.source.app[*].destAddresses = "destination"
+*.source.app[*].destAddresses = ["destination"]
 
 *.destination.numApps = 1
 *.destination.app[0].typename = "UdpSink"
