--- a/showcases/visualizer/transportpathactivity/omnetpp.ini
+++ b/showcases/visualizer/transportpathactivity/omnetpp.ini
@@ -5,7 +5,7 @@ network = TransportPathVisualizerSimpleWiredShowcase
 # UDP application parameters
 *.source.numApps = 1
 *.source.app[0].typename = "UdpBasicApp"
-*.source.app[0].destAddresses = "destination"
+*.source.app[0].destAddresses = ["destination"]
 *.source.app[0].destPort = 1000
 *.source.app[0].messageLength = 100B
 *.source.app[0].startTime = 0s
@@ -26,7 +26,7 @@ network = TransportPathVisualizerSimpleWirelessShowcase
 # UDP application parameters
 *.source.numApps = 1
 *.source.app[0].typename = "UdpBasicApp"
-*.source.app[0].destAddresses = "destination"
+*.source.app[0].destAddresses = ["destination"]
 *.source.app[0].destPort = 1000
 *.source.app[0].messageLength = 100B
 *.source.app[0].startTime = 0s
@@ -55,10 +55,10 @@ network = TransportPathVisualizerFilteringShowcase
 *.source*.app[0].messageLength = 100B
 *.source*.app[0].startTime = 0s
 
-*.source1.app[0].destAddresses = "destination1"
+*.source1.app[0].destAddresses = ["destination1"]
 *.source1.app[0].sendInterval = 0.6s
 
-*.source2.app[0].destAddresses = "destination2"
+*.source2.app[0].destAddresses = ["destination2"]
 *.source2.app[0].sendInterval = 0.8s
 
 *.destination*.numApps = 1
