--- a/showcases/wireless/aggregation/omnetpp.ini
+++ b/showcases/wireless/aggregation/omnetpp.ini
@@ -5,7 +5,7 @@ sim-time-limit = 10s
 # traffic
 *.host1.numApps = 1
 *.host1.app[0].typename = "UdpBasicApp"
-*.host1.app[0].destAddresses = "host2"
+*.host1.app[0].destAddresses = ["host2"]
 *.host1.app[0].destPort = 80
 *.host1.app[0].messageLength = 100Byte
 
