--- a/showcases/wireless/blockack/omnetpp.ini
+++ b/showcases/wireless/blockack/omnetpp.ini
@@ -5,7 +5,7 @@ sim-time-limit = 1s
 # traffic
 *.host1.numApps = 1
 *.host1.app[0].typename = "UdpBasicApp"
-*.host1.app[0].destAddresses = "host2"
+*.host1.app[0].destAddresses = ["host2"]
 *.host1.app[0].destPort = 1000
 *.host1.app[0].messageLength = 700B
 *.host1.app[0].sendInterval = 0.1ms		# 10 Mbps
@@ -60,7 +60,7 @@ description = "Mixed traffic of packets shorter and longer than blockAckReqThres
 
 *.host1.numApps = 2
 *.host1.app[1].typename = "UdpBasicApp"
-*.host1.app[1].destAddresses = "host2"
+*.host1.app[1].destAddresses = ["host2"]
 *.host1.app[1].destPort = 2000
 *.host1.app[1].messageLength = 1700B
 *.host1.app[1].sendInterval = 0.1ms		# 10 Mbps
@@ -78,7 +78,7 @@ description = "Mixed traffic of packets shorter and longer than blockAckReqThres
 #
 #*.host2.numApps = 2
 #*.host2.app[1].typename = "UdpBasicApp"
-#*.host2.app[1].destAddresses = "host1"
+#*.host2.app[1].destAddresses = ["host1"]
 #*.host2.app[1].destPort = 2000
 #*.host2.app[1].messageLength = 1700B
 #*.host2.app[1].sendInterval = 0.25ms		# 2.5 Mbps
