--- a/showcases/wireless/coexistence/omnetpp.ini
+++ b/showcases/wireless/coexistence/omnetpp.ini
@@ -26,7 +26,7 @@ repeat = 8
 # wpan hosts app settings
 *.wpanHost1.numApps = 1
 *.wpanHost1.app[0].typename = "UdpBasicApp"
-*.wpanHost1.app[0].destAddresses = "wpanHost2"
+*.wpanHost1.app[0].destAddresses = ["wpanHost2"]
 *.wpanHost1.app[0].destPort = 5000
 *.wpanHost1.app[0].messageLength = 88byte
 *.wpanHost1.app[0].packetName = "UDPData-wpan-"
@@ -40,7 +40,7 @@ repeat = 8
 # wifi hosts app settings
 *.wifiHost1.numApps = 1
 *.wifiHost1.app[*].typename = "UdpBasicApp"
-*.wifiHost1.app[*].destAddresses = "wifiHost2"
+*.wifiHost1.app[*].destAddresses = ["wifiHost2"]
 *.wifiHost1.app[*].destPort = 5000
 *.wifiHost1.app[*].messageLength = 1000byte
 *.wifiHost1.app[*].packetName = "UDPData-wifi"
