--- a/showcases/wireless/crosstalk/omnetpp.ini
+++ b/showcases/wireless/crosstalk/omnetpp.ini
@@ -19,7 +19,7 @@
 # Udp app settings
 *.host1.numApps = 1
 *.host1.app[0].typename = "UdpBasicApp"
-*.host1.app[*].destAddresses = "host2"
+*.host1.app[*].destAddresses = ["host2"]
 *.host1.app[*].destPort = 1000
 *.host1.app[*].messageLength = 1000Byte
 *.host1.app[*].sendInterval = 100ms
@@ -30,7 +30,7 @@
 
 *.host3.numApps = 1
 *.host3.app[0].typename = "UdpBasicApp"
-*.host3.app[*].destAddresses = "host4"
+*.host3.app[*].destAddresses = ["host4"]
 *.host3.app[*].destPort = 1000
 *.host3.app[*].messageLength = 1000Byte
 *.host3.app[*].sendInterval = 100ms
