--- a/showcases/wireless/errorrate/omnetpp.ini
+++ b/showcases/wireless/errorrate/omnetpp.ini
@@ -34,7 +34,7 @@ network = ErrorRateShowcase
 # UDP app
 *.sourceHost.numApps = 1
 *.sourceHost.app[0].typename = "UdpBasicApp"
-*.sourceHost.app[0].destAddresses = "destinationHost"
+*.sourceHost.app[0].destAddresses = ["destinationHost"]
 *.sourceHost.app[0].startTime = 0s
 *.sourceHost.app[0].packetName = "UDPData-"
 *.sourceHost.app[0].destPort = 5000
