--- a/showcases/wireless/fragmentation/omnetpp.ini
+++ b/showcases/wireless/fragmentation/omnetpp.ini
@@ -8,7 +8,7 @@ sim-time-limit = 10s
 # traffic settings - 32Mbps
 *.wifiHost1.numApps = 1
 *.wifiHost1.app[0].typename = "UdpBasicApp"
-*.wifiHost1.app[0].destAddresses = "wifiHost2"
+*.wifiHost1.app[0].destAddresses = ["wifiHost2"]
 *.wifiHost1.app[0].destPort = 4000
 *.wifiHost1.app[0].sendInterval = 0.5ms
 *.wifiHost1.app[0].messageLength = 2000Byte
