--- a/showcases/wireless/hiddennode/omnetpp.ini
+++ b/showcases/wireless/hiddennode/omnetpp.ini
@@ -28,7 +28,7 @@ sim-time-limit = 5s
 # traffic generation
 *.hostA.numApps = 1
 *.hostA.app[0].typename = "UdpBasicApp"
-*.hostA.app[0].destAddresses = "hostB"
+*.hostA.app[0].destAddresses = ["hostB"]
 *.hostA.app[0].destPort = 5000
 *.hostA.app[0].packetName = "UDPData"
 *.hostA.app[0].messageLength = 1000byte
@@ -36,7 +36,7 @@ sim-time-limit = 5s
 
 *.hostC.numApps = 1
 *.hostC.app[0].typename = "UdpBasicApp"
-*.hostC.app[0].destAddresses = "hostB"
+*.hostC.app[0].destAddresses = ["hostB"]
 *.hostC.app[0].destPort = 5000
 *.hostC.app[0].packetName = "UDPData"
 *.hostC.app[0].messageLength = 1000byte
