--- a/showcases/wireless/ieee802154/omnetpp.ini
+++ b/showcases/wireless/ieee802154/omnetpp.ini
@@ -10,7 +10,7 @@ network = Ieee802154Showcase
 # app configuration
 *.sensor*.numApps = 1
 *.sensor*.app[*].typename = "UdpBasicApp"
-*.sensor*.app[*].destAddresses = "controller"
+*.sensor*.app[*].destAddresses = ["controller"]
 *.sensor*.app[*].destPort = 1000
 *.sensor*.app[*].sendInterval = 1s
 *.sensor*.app[*].startTime = uniform(0s,1s)
@@ -19,7 +19,7 @@ network = Ieee802154Showcase
 
 *.controller.numApps = 2
 *.controller.app[0].typename = "UdpBasicApp"
-*.controller.app[0].destAddresses = "lamp1 lamp2 lamp3 lamp4 lamp5 lamp6 lamp7 lamp8"
+*.controller.app[0].destAddresses = ["lamp1", "lamp2", "lamp3", "lamp4", "lamp5", "lamp6", "lamp7", "lamp8"]
 *.controller.app[0].destPort = 1000
 *.controller.app[0].sendInterval = 0.125s
 *.controller.app[0].startTime = exponential(1s)
