--- a/showcases/wireless/ratecontrol/omnetpp.ini
+++ b/showcases/wireless/ratecontrol/omnetpp.ini
@@ -49,7 +49,7 @@ sim-time-limit = 25s
 *.*Host.numApps = 1
 
 *.sourceHost.app[0].typename = "UdpBasicApp"
-*.sourceHost.app[0].destAddresses = "sinkHost"
+*.sourceHost.app[0].destAddresses = ["sinkHost"]
 *.sourceHost.app[0].destPort = 5000
 *.sourceHost.app[0].messageLength = 1000B
 *.sourceHost.app[0].sendInterval = 0.1ms
