--- a/showcases/wireless/sensornetwork/omnetpp.ini
+++ b/showcases/wireless/sensornetwork/omnetpp.ini
@@ -32,7 +32,7 @@
 # app
 *.sensor*.numApps = 1
 *.sensor*.app[0].typename = "UdpBasicApp"
-*.sensor*.app[0].destAddresses = "server"
+*.sensor*.app[0].destAddresses = ["server"]
 *.sensor*.app[0].destPort = 1000
 *.sensor*.app[0].sendInterval = 1s
 *.sensor*.app[0].startTime = exponential(1s)
