--- a/showcases/wireless/throughput/omnetpp.ini
+++ b/showcases/wireless/throughput/omnetpp.ini
@@ -16,7 +16,7 @@ sim-time-limit = 1s
 
 *.sourceHost.numApps = 1
 *.sourceHost.app[0].typename = "UdpBasicApp"
-*.sourceHost.app[*].destAddresses = "destinationHost"
+*.sourceHost.app[*].destAddresses = ["destinationHost"]
 *.sourceHost.app[*].destPort = 5000
 *.sourceHost.app[*].packetName = "UDPData-"
 *.sourceHost.app[*].startTime = 0s
