--- a/showcases/wireless/txop/omnetpp.ini
+++ b/showcases/wireless/txop/omnetpp.ini
@@ -5,7 +5,7 @@ sim-time-limit = 5s
 # traffic
 *.host1.numApps = 2
 *.host1.app[*].typename = "UdpBasicApp"
-*.host1.app[*].destAddresses = "host2"
+*.host1.app[*].destAddresses = ["host2"]
 
 *.host1.app[0].destPort = 1000
 *.host1.app[0].messageLength = 1200B
