--- a/tutorials/wireless/omnetpp.ini
+++ b/tutorials/wireless/omnetpp.ini
@@ -8,7 +8,7 @@ sim-time-limit = 20s
 
 *.hostA.numApps = 1
 *.hostA.app[0].typename = "UdpBasicApp"
-*.hostA.app[0].destAddresses = "hostB"
+*.hostA.app[0].destAddresses = ["hostB"]
 *.hostA.app[0].destPort = 5000
 *.hostA.app[0].messageLength = 1000B
 *.hostA.app[0].sendInterval = exponential(12ms)
