--- a/examples/adhoc/qos/omnetpp.ini
+++ b/examples/adhoc/qos/omnetpp.ini
@@ -24,7 +24,7 @@ sim-time-limit = 5s
 # cli
 **.cliHost.numApps = 5
 **.cliHost.app[*].typename = "UdpBasicApp"
-**.cliHost.app[*].destAddresses = "srvHost"
+**.cliHost.app[*].destAddresses = ["srvHost"]
 **.cliHost.app[0].destPort = 21
 **.cliHost.app[1].destPort = 80
 **.cliHost.app[2].destPort = 4000
