--- a/examples/bgpv4/Bgp2RoutersInAS/omnetpp.ini
+++ b/examples/bgpv4/Bgp2RoutersInAS/omnetpp.ini
@@ -58,13 +58,13 @@ output-vector-precision = 4
 **.app[0].destPort = 1234
 
 **.HA31.app[0].typename = "UdpBasicApp"
-**.HA31.app[0].destAddresses = "192.171.1.2"
+**.HA31.app[0].destAddresses = ["192.171.1.2"]
 **.HB11.app[0].typename = "UdpBasicApp"
-**.HB11.app[0].destAddresses = "192.172.1.2"
+**.HB11.app[0].destAddresses = ["192.172.1.2"]
 **.HC11.app[0].typename = "UdpBasicApp"
-**.HC11.app[0].destAddresses = "192.170.1.2"
+**.HC11.app[0].destAddresses = ["192.170.1.2"]
 **.HC21.app[0].typename = "UdpBasicApp"
-**.HC21.app[0].destAddresses = "192.168.1.2"
+**.HC21.app[0].destAddresses = ["192.168.1.2"]
 
 **.HA32.app[0].typename = "UdpSink"
 **.HB12.app[0].typename = "UdpSink"
