--- a/examples/bgpv4/Bgp3Routers/omnetpp.ini
+++ b/examples/bgpv4/Bgp3Routers/omnetpp.ini
@@ -46,17 +46,17 @@ output-scalar-precision = 3
 **.app[0].destPort = 1234
 
 **.HA11.app[*].typename = "UdpBasicApp"
-**.HA11.app[0].destAddresses = "192.170.1.2"
+**.HA11.app[0].destAddresses = ["192.170.1.2"]
 **.HA21.app[*].typename = "UdpBasicApp"
-**.HA21.app[0].destAddresses = "192.172.1.2"
+**.HA21.app[0].destAddresses = ["192.172.1.2"]
 **.HB11.app[*].typename = "UdpBasicApp"
-**.HB11.app[0].destAddresses = "192.169.1.2"
+**.HB11.app[0].destAddresses = ["192.169.1.2"]
 **.HB21.app[*].typename = "UdpBasicApp"
-**.HB21.app[0].destAddresses = "192.173.1.2"
+**.HB21.app[0].destAddresses = ["192.173.1.2"]
 **.HC11.app[*].typename = "UdpBasicApp"
-**.HC11.app[0].destAddresses = "192.171.1.2"
+**.HC11.app[0].destAddresses = ["192.171.1.2"]
 **.HC21.app[*].typename = "UdpBasicApp"
-**.HC21.app[0].destAddresses = "192.168.1.2"
+**.HC21.app[0].destAddresses = ["192.168.1.2"]
 
 **.HA12.app[*].typename = "UdpSink"
 **.HA22.app[*].typename = "UdpSink"
