--- a/examples/bgpv4/BgpUpdate/omnetpp.ini
+++ b/examples/bgpv4/BgpUpdate/omnetpp.ini
@@ -45,7 +45,7 @@ output-scalar-precision = 5
 
 **.H1.app[0].typename = "UdpBasicApp"
 **.H1.app[0].localPort = 1234
-**.H1.app[0].destAddresses = "192.168.2.1"
+**.H1.app[0].destAddresses = ["192.168.2.1"]
 
 **.H2.app[0].typename="UdpSink"
 **.H2.app[0].localPort = 5678
