--- a/examples/inet/ipv4hook/omnetpp.ini
+++ b/examples/inet/ipv4hook/omnetpp.ini
@@ -4,7 +4,7 @@ network = Ipv4hook
 **.host*.numApps = 1
 
 **.host1.app[0].typename = "UdpBasicApp"
-**.host1.app[0].destAddresses = "host2"
+**.host1.app[0].destAddresses = ["host2"]
 **.host1.app[0].destPort = 1000
 **.host1.app[0].messageLength = 2000B
 **.host1.app[0].sendInterval = 1s
