--- a/examples/inet/multicast/omnetpp.ini
+++ b/examples/inet/multicast/omnetpp.ini
@@ -18,9 +18,8 @@ total-stack = 28MiB
 **.app[0].destPort = 100
 **.app[0].messageLength = 1250 bytes
 **.app[0].sendInterval = 0.9s
-**.app[0].destAddresses = \
-     "172.0.0.1 172.0.0.2 172.0.0.3 172.0.1.1 172.0.2.2 \
-      225.0.0.1 225.0.0.2 225.0.0.3 225.0.1.1 225.0.1.2 225.0.2.1"
+**.app[0].destAddresses = [ "172.0.0.1", "172.0.0.2", "172.0.0.3", "172.0.1.1", "172.0.2.2", \
+      "225.0.0.1", "225.0.0.2", "225.0.0.3", "225.0.1.1", "225.0.1.2", "225.0.2.1" ]
 **.app[0].joinLocalMulticastGroups = true
 
 # NIC configuration
