--- a/examples/inet/udpclientserver/omnetpp.ini
+++ b/examples/inet/udpclientserver/omnetpp.ini
@@ -41,13 +41,13 @@ total-stack = 7MiB
 [Config udp_OK_ipv4]
 extends = _ipv4
 description = "UDP OK"
-**.client*.app[0].destAddresses = "server"
+**.client*.app[0].destAddresses = ["server"]
 **.client*.app[0].destPort = 1000
 
 [Config udp_Fragment_ipv4]
 extends = _ipv4
 description = "UDP OK"
-**.client*.app[0].destAddresses = "server"
+**.client*.app[0].destAddresses = ["server"]
 **.client*.app[0].destPort = 1000
 **.client*.app[0].messageLength = 10000B
 
@@ -55,48 +55,48 @@ description = "UDP OK"
 [Config udp_Port_Unav_ipv4]
 extends = _ipv4
 description = "UDP Destination Port Unavailable"
-**.client*.app[0].destAddresses = "server"
+**.client*.app[0].destAddresses = ["server"]
 **.client*.app[0].destPort = 1001
 
 [Config udp_Host_Unav_ipv4]
 extends = _ipv4
 description = "UDP Destination Host Unavailable"
-**.client*.app[0].destAddresses = "unavserver"
+**.client*.app[0].destAddresses = ["unavserver"]
 **.client*.app[0].destPort = 1001
 
 [Config udp_OK_ipv6]
 extends = _ipv6
 description = "UDP OK"
-**.client*.app[0].destAddresses = "server(ipv6)"
+**.client*.app[0].destAddresses = ["server(ipv6)"]
 **.client*.app[0].destPort = 1000
 
 [Config udp_Port_Unav_ipv6]
 extends = _ipv6
 description = "UDP Destination Port Unavailable"
-**.client*.app[0].destAddresses = "server(ipv6)"
+**.client*.app[0].destAddresses = ["server(ipv6)"]
 **.client*.app[0].destPort = 1001
 
 [Config udp_Host_Unav_ipv6]
 extends = _ipv6
 description = "UDP Destination Host Unavailable"
-**.client*.app[0].destAddresses = "unavserver(ipv6)"
+**.client*.app[0].destAddresses = ["unavserver(ipv6)"]
 **.client*.app[0].destPort = 1001
 
 [Config udp_OK_gn]
 extends = _gn
 description = "UDP OK"
-**.client*.app[0].destAddresses = "server(modulepath)"
+**.client*.app[0].destAddresses = ["server(modulepath)"]
 **.client*.app[0].destPort = 1000
 
 [Config udp_Port_Unav_gn]
 extends = _gn
 description = "UDP Destination Port Unavailable"
-**.client*.app[0].destAddresses = "server(modulepath)"
+**.client*.app[0].destAddresses = ["server(modulepath)"]
 **.client*.app[0].destPort = 1001
 
 [Config udp_Host_Unav_gn]
 extends = _gn
 description = "UDP Destination Host Unavailable"
-**.client*.app[0].destAddresses = "unavserver(modulepath)"
+**.client*.app[0].destAddresses = ["unavserver(modulepath)"]
 **.client*.app[0].destPort = 1001
 
