--- a/examples/mpls/net37/omnetpp.ini
+++ b/examples/mpls/net37/omnetpp.ini
@@ -12,7 +12,7 @@ total-stack = 64MiB
 **.host1.app[0].destPort = 100
 **.host1.app[0].messageLength = 128 bytes
 **.host1.app[0].sendInterval = 0.01s
-**.host1.app[0].destAddresses = "host2"
+**.host1.app[0].destAddresses = ["host2"]
 
 # LSR configuration
 **.LSR2.classifier.config = xmldoc("LSR2_fec.xml")
