--- a/examples/mpls/testte_routing/omnetpp.ini
+++ b/examples/mpls/testte_routing/omnetpp.ini
@@ -10,7 +10,7 @@ total-stack = 64MiB
 **.host{1..2,5}.app[0].destPort = 100
 **.host{1..2,5}.app[0].messageLength = 128 bytes
 **.host{1..2,5}.app[0].sendInterval = 0.01s
-**.host{1..2,5}.app[0].destAddresses = "host3"
+**.host{1..2,5}.app[0].destAddresses = ["host3"]
 
 **.host3.numApps = 1
 **.host3.app[0].typename = "UdpSink"
