--- a/examples/ospfv2/simpletest/omnetpp.ini
+++ b/examples/ospfv2/simpletest/omnetpp.ini
@@ -9,8 +9,8 @@ network = SimpleTest
 **.app[0].messageLength = 32 bytes
 **.app[0].sendInterval = 0.1s
 **.app[0].startTime = 4s
-**.H2.app[0].destAddresses = "H1"
-**.H1.app[0].destAddresses = "H2"
+**.H2.app[0].destAddresses = ["H1"]
+**.H1.app[0].destAddresses = ["H2"]
 **.app[1].typename = "UdpEchoApp"
 **.app[1].localPort = 1234
 
