--- a/examples/rip/simpletest/omnetpp.ini
+++ b/examples/rip/simpletest/omnetpp.ini
@@ -14,8 +14,8 @@ sim-time-limit = 600s
 **.app[0].messageLength = 32 bytes
 **.app[0].sendInterval = 0.1s
 **.app[0].startTime = 4s
-**.H2.app[0].destAddresses = "H1"
-**.H1.app[0].destAddresses = "H2"
+**.H2.app[0].destAddresses = ["H1"]
+**.H1.app[0].destAddresses = ["H2"]
 **.app[1].typename = "UdpEchoApp"
 **.app[1].localPort = 1234
 
