--- a/examples/wireless/crosstalk/omnetpp.ini
+++ b/examples/wireless/crosstalk/omnetpp.ini
@@ -24,8 +24,8 @@ seed-set = 1
 *.*Node[*].app[0].messageLength = 1250B
 *.*Node[*].app[0].startTime = exponential(100us)
 *.*Node[*].app[0].sendInterval = exponential(100us)
-*.aNode[*].app[0].destAddresses = "aNode[0]"
-*.bNode[*].app[0].destAddresses = "bNode[0]"
+*.aNode[*].app[0].destAddresses = ["aNode[0]"]
+*.bNode[*].app[0].destAddresses = ["bNode[0]"]
 
 # nic
 *.*Node[*].wlan[*].radio.typename = "Ieee80211DimensionalRadio"
