--- a/showcases/visualizer/packetdrop/omnetpp.ini
+++ b/showcases/visualizer/packetdrop/omnetpp.ini
@@ -5,7 +5,7 @@ description = "Cause: queue full at switch"
 # UDP app settings
 *.source.numApps = 1
 *.source.app[0].typename = "UdpBasicApp"
-*.source.app[*].destAddresses = "destination"
+*.source.app[*].destAddresses = ["destination"]
 *.source.app[*].sendInterval = 0.0005ms
 *.source.app[*].destPort = 1000
 *.source.app[*].messageLength = 1000Byte
