--- a/showcases/visualizer/physicallinkactivity/omnetpp.ini
+++ b/showcases/visualizer/physicallinkactivity/omnetpp.ini
@@ -48,7 +48,7 @@ network = PhysicalLinkVisualizerMobileShowcase
 # Application parameters
 *.host*.numApps = 2
 *.host*.app[0].typename = "UdpBasicApp"
-*.host*.app[0].destAddresses = "192.168.1.255"
+*.host*.app[0].destAddresses = ["192.168.1.255"]
 *.host*.app[0].packetName = "Broadcast"
 *.host*.app[0].destPort = 1000
 *.host*.app[0].messageLength = 100B
