--- a/showcases/visualizer/statistic/omnetpp.ini
+++ b/showcases/visualizer/statistic/omnetpp.ini
@@ -22,7 +22,7 @@ description = Displaying packet error rate
 # application parameters
 *.source.numApps = 1
 *.source.app[0].typename = "UdpBasicApp"
-*.source.app[*].destAddresses = "destination"
+*.source.app[*].destAddresses = ["destination"]
 *.source.app[*].destPort = 1000
 *.source.app[*].messageLength = 1000byte
 *.source.app[*].sendInterval = 1ms
