--- a/showcases/wireless/pathloss/omnetpp.ini
+++ b/showcases/wireless/pathloss/omnetpp.ini
@@ -22,7 +22,7 @@ sim-time-limit = 9.14ms
 # UDP app settings
 *.*.numApps = 1
 *.source.app[0].typename = "UdpBasicApp"
-*.source.app[*].destAddresses = "destination"
+*.source.app[*].destAddresses = ["destination"]
 *.source.app[*].destPort = 1000
 *.source.app[*].localPort = 1000
 *.source.app[*].messageLength = 1000Byte
