--- a/showcases/wireless/qos/omnetpp.ini
+++ b/showcases/wireless/qos/omnetpp.ini
@@ -8,7 +8,7 @@ sim-time-limit = 10s
 # cli
 *.client.numApps = 4
 *.client.app[*].typename = "UdpBasicApp"
-*.client.app[*].destAddresses = "server"
+*.client.app[*].destAddresses = ["server"]
 *.client.app[*].startTime = 1.0s+this.sendInterval*index/4
 *.client.app[*].stopTime = 6.0s
 *.client.app[0].destPort = 21			# background priority
