examples, tests: follow the destAddresses parameter type change.

--- a/examples/diffserv/onedomain/omnetpp.ini
+++ b/examples/diffserv/onedomain/omnetpp.ini
@@ -16,10 +16,10 @@ sim-time-limit = 1250s
 
 # voice streaming
 **.H{1..4}.app[0].typename = "UdpBasicBurst"
-**.H1.app[0].destAddresses = "H5"
-**.H2.app[0].destAddresses = "H6"
-**.H3.app[0].destAddresses = "H7"
-**.H4.app[0].destAddresses = "H8"
+**.H1.app[0].destAddresses = ["H5"]
+**.H2.app[0].destAddresses = ["H6"]
+**.H3.app[0].destAddresses = ["H7"]
+**.H4.app[0].destAddresses = ["H8"]
 **.H{1..4}.app[0].chooseDestAddrMode = "once"
 **.H{1..4}.app[0].destPort = 2000
 **.H{1..4}.app[0].startTime = uniform(1s,2s)
@@ -33,7 +33,7 @@ sim-time-limit = 1250s
 **.H{5..8}.app[0].localPort = 2000
 **.H{5..8}.app[0].delayLimit = 0ms
 
-**.H{5..8}.app[0].destAddresses = ""
+**.H{5..8}.app[0].destAddresses = []
 **.H{5..8}.app[0].chooseDestAddrMode = "once"
 **.H{5..8}.app[0].destPort = 0
 **.H{5..8}.app[0].messageLength = 0B
