--- a/examples/inet/routerperf/omnetpp.ini
+++ b/examples/inet/routerperf/omnetpp.ini
@@ -14,12 +14,12 @@ total-stack = 200MiB
 **.sender[*].trafGen.protocol = 157
 **.sender[*].trafGen.packetLength = 800B
 
-**.sender[0].trafGen.destAddresses = "recip[0]"
-**.sender[1].trafGen.destAddresses = "recip[1]"
-**.sender[2].trafGen.destAddresses = "recip[2]"
-**.sender[3].trafGen.destAddresses = "recip[3]"
-**.sender[4].trafGen.destAddresses = "recip[4]"
-**.sender[5].trafGen.destAddresses = "recip[5]"
+**.sender[0].trafGen.destAddresses = ["recip[0]"]
+**.sender[1].trafGen.destAddresses = ["recip[1]"]
+**.sender[2].trafGen.destAddresses = ["recip[2]"]
+**.sender[3].trafGen.destAddresses = ["recip[3]"]
+**.sender[4].trafGen.destAddresses = ["recip[4]"]
+**.sender[5].trafGen.destAddresses = ["recip[5]"]
 
 **.recip[*].trafGen.protocol = 157
 
