--- a/examples/inet/udpburst/omnetpp.ini
+++ b/examples/inet/udpburst/omnetpp.ini
@@ -24,7 +24,7 @@ total-stack = 7MiB
 
 **.sink.numApps = 1
 **.sink.app[0].typename = "UdpBasicBurst"
-**.sink.app[0].destAddresses = ""
+**.sink.app[0].destAddresses = []
 **.sink.app[0].localPort = 100
 **.sink.app[0].destPort = 100
 **.sink.app[0].messageLength = 1250B
