--- a/tests/misc/ns3/lib/ns3test.ini
+++ b/tests/misc/ns3/lib/ns3test.ini
@@ -23,7 +23,7 @@ rng-class = "cLCG32"
 
 # cli
 **.cliHost[*].udpApp[*].typename = "UDPBasicApp"
-**.cliHost[*].udpApp[*].destAddresses = "srvHost"
+**.cliHost[*].udpApp[*].destAddresses = ["srvHost"]
 **.cliHost[*].udpApp[0].destPort = 5000
 **.cliHost[*].udpApp[1].destPort = 4000
 **.cliHost[*].udpApp[2].destPort = 80
