--- a/examples/inet/shutdownrestart/omnetpp.ini
+++ b/examples/inet/shutdownrestart/omnetpp.ini
@@ -35,7 +35,7 @@ sim-time-limit = 100s
 #clients send to server via UDP and server echoing it
 **.cli[*].numApps = 1
 **.cli[*].app[0].typename = "UdpBasicBurst"
-**.cli[*].app[0].destAddresses = "srv"
+**.cli[*].app[0].destAddresses = ["srv"]
 **.cli[*].app[0].destPort = 1000
 **.cli[*].app[0].messageLength = 1000B
 **.cli[*].app[0].sendInterval = 100ms
