showcases: follow 'QosClassifier: using JSON parameters'

--- a/showcases/wireless/blockack/omnetpp.ini
+++ b/showcases/wireless/blockack/omnetpp.ini
@@ -91,7 +91,7 @@ description = "Mixed traffic of packets shorter and longer than blockAckReqThres
 #*.host1.wlan[*].mac.hcf.originatorAckPolicy.maxBlockAckPolicyFrameLength = 10000B
 #*.host2.wlan[*].mac.hcf.originatorAckPolicy.maxBlockAckPolicyFrameLength = 100B
 #
-#**.classifier.udpPortUpMap = "21 BK 80 BE 4000 VI 5000 VO 2000 VI 1000 VI"
+#**.classifier.udpPortUpMap = [ {port:21, up:"BK"}, {port:80, up:"BE"}, {port:4000, up:"VI"}, {port:5000, up:"VO"}, {port:2000, up:"VI"}, {port:1000, up:"VI"} ]
 
 #**.infoVisualizer.displayInfos = true
 #**.infoVisualizer.modules = "*.host*.wlan[0].mac.hcf.edcaTxopProcedures[*]"
