--- a/showcases/wireless/txop/omnetpp.ini
+++ b/showcases/wireless/txop/omnetpp.ini
@@ -27,7 +27,7 @@ sim-time-limit = 5s
 # QoS
 *.host*.wlan[*].mac.qosStation = true
 *.host*.wlan[*].classifier.typename = "QosClassifier"
-*.host*.wlan[*].classifier.udpPortUpMap = "1000 VO 2000 VO"
+*.host*.wlan[*].classifier.udpPortUpMap = [ {port:1000, up:"VO"}, {port:2000, up:"VO"} ]
 
 # turn off fragmentation
 *.host1.wlan[*].mac.mtu = 15000B
