--- a/.cproject
+++ b/.cproject
@@ -229,7 +229,9 @@
                     					
                     <sourceEntries>
                         						
-                        <entry excluding="inet/applications/voipstream|inet/emulation|inet/linklayer/ext|inet/transportlayer/tcp_lwip|inet/transportlayer/tcp_nsc|transport/tcp_lwip|transport/tcp_nsc" flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name="src"/>
+                        <entry excluding="inet/applications/voipstream|inet/emulation|inet/linklayer/ext|inet/transportlayer/tcp_nsc|inet/transportlayer/tcp_lwip|transport/tcp_nsc|transport/tcp_lwip" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="src"/>
+                        						
+                        <entry flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name="tutorials/queueing"/>
                         					
                     </sourceEntries>
                     				
