eth: examples: duplexmode fixes

--- a/examples/ethernet/arptest/omnetpp.ini
+++ b/examples/ethernet/arptest/omnetpp.ini
@@ -26,7 +26,7 @@ total-stack = 2MiB
 **.server.app[0].echoDelay = 0s
 
 # Ethernet NIC configuration
-**.eth[*].mac.duplexMode = true
+**.eth[*].duplexMode = true
 
 # Queues
 **.ppp[*].ppp.queue.typename = "DropTailQueue"
