--- a/examples/inet/tcp_eth_reconnect/omnetpp.ini
+++ b/examples/inet/tcp_eth_reconnect/omnetpp.ini
@@ -12,8 +12,7 @@ description = ""
 
 [Config with_EtherMAC_halfduplex]
 description = ""
-**.eth[*].mac.typename = "EtherMac"
-**.eth[*].mac.duplexMode = false
+**.eth[*].duplexMode = false
 **.eth[*].mac.queue.typename = "EtherQosQueue"
 **.eth[*].mac.queue.dataQueue.typename = "DropTailQueue"
 
