--- a/examples/ipv6/ipv6nclients/omnetpp.ini
+++ b/examples/ipv6/ipv6nclients/omnetpp.ini
@@ -87,9 +87,7 @@ sim-time-limit = 168h
 **.eth[*].mac.queue.typename = "EtherQosQueue"
 **.eth[*].mac.queue.dataQueue.typename = "DropTailQueue" # in routers
 **.eth[*].mac.queue.dataQueue.packetCapacity = 10  # in routers
-
-#**.eth[*].mac.txrate = 10Mbps
-**.eth[*].mac.duplexMode = true
+**.eth[*].duplexMode = true
 
 # ADDED by WEI for testing purposes
 #**.cli[0].eth[0].address = "0A-AA-00-00-00-01"
