--- a/examples/ipv6/nclients/omnetpp.ini
+++ b/examples/ipv6/nclients/omnetpp.ini
@@ -96,8 +96,7 @@ network = NClientsEth
 **.eth[*].mac.queue.dataQueue.typename = "DropTailQueue" # in routers
 **.eth[*].mac.queue.dataQueue.packetCapacity = 10  # in routers
 
-#**.eth[*].mac.txrate = 10Mbps
-**.eth[*].mac.duplexMode = true
+**.eth[*].duplexMode = true
 
 **.pcapRecorder[0].moduleNamePatterns="eth[*]"
 **.pcapRecorder[0].pcapLinkType = 1
