--- a/examples/mobileipv6/omnetpp.ini
+++ b/examples/mobileipv6/omnetpp.ini
@@ -153,7 +153,7 @@ network = mIPv6Network
 **.eth[*].mac.promiscuous = false
 
 ##################################
-**.eth*.mac.duplexMode = true
+**.eth*.duplexMode = true
 **.eth*.mac.*.scalar-recording = false
 
 **.ap.*.scalar-recording = false
