--- a/examples/voipstream/VoIPStreamLargeNet/omnetpp.ini
+++ b/examples/voipstream/VoIPStreamLargeNet/omnetpp.ini
@@ -60,7 +60,7 @@ total-stack = 2MiB # increase if necessary
 # Ethernet NIC configuration
 **.eth[*].encap.writeScalars = false
 **.eth[*].mac.promiscuous = false
-**.eth[*].mac.duplexMode = true
+**.eth[*].duplexMode = true
 **.eth[*].mac.writeScalars = false
 
 # Queues
