--- a/examples/ethernet/arptest2/omnetpp.ini
+++ b/examples/ethernet/arptest2/omnetpp.ini
@@ -32,4 +32,4 @@ total-stack = 2MiB
 **.eth[*].mac.queue.dataQueue.typename = "DropTailQueue" # in routers
 **.eth[*].mac.queue.dataQueue.packetCapacity = 10  # in routers
 
-**.eth[*].mac.duplexMode = true
+**.eth[*].duplexMode = true
