--- a/examples/ethernet/lans/bus.ini
+++ b/examples/ethernet/lans/bus.ini
@@ -9,4 +9,4 @@ network = BusLAN
 **.cli.sendInterval = exponential(1s)
 **.cli.reqLength = intuniform(50,1400)*1B
 **.cli.respLength = intWithUnit(truncnormal(3000B,3000B))
-**.host*.eth.mac.duplexMode = false
+**.host*.eth.duplexMode = false
