--- a/examples/ipv6/demonetworketh/omnetpp.ini
+++ b/examples/ipv6/demonetworketh/omnetpp.ini
@@ -42,5 +42,5 @@ network = DemoNetworkEth
 **.eth[*].mac.queue.typename = "EtherQosQueue"
 **.eth[*].mac.queue.dataQueue.typename = "DropTailQueue" # in routers
 **.eth[*].mac.queue.dataQueue.packetCapacity = 10  # in routers
-**.eth[*].mac.duplexMode = true
+**.eth[*].duplexMode = true
 
