--- a/examples/ipv6/ipv6bulk/omnetpp.ini
+++ b/examples/ipv6/ipv6bulk/omnetpp.ini
@@ -76,8 +76,7 @@ sim-time-limit = 50day
 **.eth[*].mac.queue.typename = "EtherQosQueue"
 **.eth[*].mac.queue.dataQueue.typename = "DropTailQueue" # in routers
 **.eth[*].mac.queue.dataQueue.packetCapacity = 10  # in routers
-**.eth[*].mac.txrate = 10Mbps
-**.eth[*].mac.duplexMode = true
+**.eth[*].duplexMode = true
 
 **.*.tcp*.advertisedWindow = 65535
 
