--- a/examples/voipstream/VoIPStreamTest/omnetpp.ini
+++ b/examples/voipstream/VoIPStreamTest/omnetpp.ini
@@ -102,7 +102,7 @@ total-stack = 2MiB # increase if necessary
 **.eth[*].encap.writeScalars = false
 **.eth[*].mac.promiscuous = false
 **.eth[*].mac.txrate = 10e6bps
-**.eth[*].mac.duplexMode = true
+**.eth[*].duplexMode = true
 **.eth[*].mac.writeScalars = false
 
 # Queues
