examples: tcp_eth_reconnect: set ethernet mac module type by csmacdSupport parameter (instead of mac.typename)

--- a/examples/inet/tcp_eth_reconnect/omnetpp.ini
+++ b/examples/inet/tcp_eth_reconnect/omnetpp.ini
@@ -1,17 +1,21 @@
 [Config with_EtherMACFullDuplex]
 description = ""
+**.eth[*].csmacdSupport = false
+**.eth[*].duplexMode = true
 **.eth[*].mac.queue.typename = "EtherQosQueue"
 **.eth[*].mac.queue.dataQueue.typename = "DropTailQueue"
 
 [Config with_EtherMAC_fullduplex]
 description = ""
-**.eth[*].mac.typename = "EtherMac"
+**.eth[*].csmacdSupport = true
+**.eth[*].duplexMode = true
 **.eth[*].mac.queue.typename = "EtherQosQueue"
 **.eth[*].mac.queue.dataQueue.typename = "DropTailQueue"
 
 
 [Config with_EtherMAC_halfduplex]
 description = ""
+**.eth[*].csmacdSupport = true
 **.eth[*].duplexMode = false
 **.eth[*].mac.queue.typename = "EtherQosQueue"
 **.eth[*].mac.queue.dataQueue.typename = "DropTailQueue"
